src/de/tum/mocca/parser/AsmParser.java
/* Generated By:JavaCC: Do not edit this line. AsmParser.java */
package de.tum.mocca.parser;

public class AsmParser implements AsmParserConstants {
        private GraphBuilder gBuilder;
        private java.util.List cfgList;

    public static void main(String args[]) throws ParseException {

                AsmParser parser = new AsmParser(System.in);
        parser.gBuilder = new GraphBuilder();
        parser.cfgList = new java.util.LinkedList();
                while (true) {
                    System.out.print("Enter Expression: ");
                    System.out.flush();
                    try {
                        parser.program();
                    } catch (Exception e) {
                        System.out.println("Parse Error: " + e.getMessage());
                                System.out.println("Exiting.");
                                System.exit(1);
                    }
                }
    }

    public java.util.List parseIntoKripkeStructures() throws ParseException {
        cfgList = new java.util.LinkedList();
                gBuilder = new GraphBuilder();
                program();
                return cfgList;
    }

  final public void program() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      procedure();
    }
    jj_consume_token(0);
  }

  final public void procedure() throws ParseException {
        Token t;
    jj_consume_token(PROC);
    label_2:
    while (true) {
      jj_consume_token(EOL);
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
    }
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      varDeclaration();
      jj_consume_token(EOL);
    }
    label_4:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(EOL);
    }
    label_5:
    while (true) {
      if (jj_2_5(2)) {
        asmLine();
        jj_consume_token(EOL);
      } else if (jj_2_6(2)) {
        jj_consume_token(EOL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_7(2)) {
        ;
      } else {
        break label_5;
      }
    }
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(ENDP);
        gBuilder.setProcedureName(t.image);
        gBuilder.finish();
        cfgList.add(gBuilder.getKripkeStructure());
                gBuilder = new GraphBuilder();
  }

  final public void varDeclaration() throws ParseException {
        Token v;
    v = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    jj_consume_token(PTRPREFIX);
    if (jj_2_8(2)) {
      jj_consume_token(DECLITERAL);
    } else if (jj_2_9(2)) {
      jj_consume_token(HEXLITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void asmLine() throws ParseException {
        String[] sx;
        Token t;
    if (jj_2_10(2)) {
      sx = ternaryinstruction();
                gBuilder.addInstruction(sx);
    } else if (jj_2_11(2)) {
      t = jj_consume_token(LABEL);
                // remove trailing colon
                gBuilder.addLabel(t.image.substring(0, t.image.length() - 1));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String[] ternaryinstruction() throws ParseException {
        String[] sx;
        String p = null;
    sx = binaryinstruction();
    if (jj_2_12(2)) {
      jj_consume_token(COMMA);
      p = parameter();
    } else {
      ;
    }
                sx[3] = p;
                {if (true) return sx;}
    throw new Error("Missing return statement in function");
  }

  final public String[] binaryinstruction() throws ParseException {
        String[] sx;
        String p = null;
    sx = unaryinstruction();
    if (jj_2_13(2)) {
      jj_consume_token(COMMA);
      p = parameter();
    } else {
      ;
    }
                sx[2] = p;
                {if (true) return sx;}
    throw new Error("Missing return statement in function");
  }

  final public String[] unaryinstruction() throws ParseException {
        String s, p = null;
        // instruction is returned in a string array with up to 3 parameters
        String[] r = new String[4];
    s = prefixedinstruction();
    if (jj_2_14(2)) {
      p = parameter();
    } else {
      ;
    }
                r[0] = s;
                r[1] = p;
                {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public String prefixedinstruction() throws ParseException {
        Token t = null;
        String s;
    if (jj_2_15(2)) {
      t = jj_consume_token(INSTPREFIX);
    } else {
      ;
    }
    s = bareinstruction();
                {if (true) return (t == null) ? s : t.image + " " + s;}
    throw new Error("Missing return statement in function");
  }

  final public String bareinstruction() throws ParseException {
        Token t;
    t = jj_consume_token(IDENTIFIER);
                {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String parameter() throws ParseException {
        String s;
    if (jj_2_16(2)) {
      jj_consume_token(LPAREN);
      s = bareparameter();
      jj_consume_token(RPAREN);
                {if (true) return s;}
    } else if (jj_2_17(2)) {
      s = bareparameter();
                {if (true) return s;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String bareparameter() throws ParseException {
        Token u = null, v = null, w = null, x = null;
    if (jj_2_40(2)) {
      if (jj_2_18(2)) {
        jj_consume_token(SHORT);
      } else if (jj_2_19(2)) {
        jj_consume_token(FAR);
      } else if (jj_2_20(2)) {
        v = jj_consume_token(OFFSET);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_21(2)) {
        jj_consume_token(PTRPREFIX);
      } else {
        ;
      }
      w = jj_consume_token(IDENTIFIER);
                {if (true) return v == null ? w.image : (v.image + w.image);}
    } else if (jj_2_41(2)) {
      if (jj_2_24(2)) {
        if (jj_2_22(2)) {
          jj_consume_token(SMALL);
        } else if (jj_2_23(2)) {
          jj_consume_token(LARGE);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      if (jj_2_25(2)) {
        u = jj_consume_token(PTRPREFIX);
      } else {
        ;
      }
      if (jj_2_38(2)) {
        w = jj_consume_token(ADDRESS);
      } else if (jj_2_39(2)) {
        if (jj_2_26(2)) {
          jj_consume_token(LPAREN);
        } else {
          ;
        }
        if (jj_2_27(2)) {
          v = jj_consume_token(LABEL);
        } else {
          ;
        }
        if (jj_2_28(2)) {
          w = jj_consume_token(DECLITERAL);
        } else if (jj_2_29(2)) {
          w = jj_consume_token(HEXLITERAL);
        } else if (jj_2_30(2)) {
          w = jj_consume_token(IDENTIFIER);
        } else if (jj_2_31(2)) {
          w = jj_consume_token(ADDRESS);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_32(2)) {
          jj_consume_token(RPAREN);
        } else {
          ;
        }
        if (jj_2_37(2)) {
          if (jj_2_35(2)) {
            x = jj_consume_token(ADDRESS);
          } else if (jj_2_36(2)) {
            jj_consume_token(LPAREN);
            if (jj_2_33(2)) {
              jj_consume_token(IDENTIFIER);
            } else if (jj_2_34(2)) {
              jj_consume_token(DECLITERAL);
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
            jj_consume_token(RPAREN);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return w.image + (x == null ? "" : x.image);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  final private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  final private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  final private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  final private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  final private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  final private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  final private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  final private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  final private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  final private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  final private boolean jj_3_8() {
    if (jj_scan_token(DECLITERAL)) return true;
    return false;
  }

  final private boolean jj_3_21() {
    if (jj_scan_token(PTRPREFIX)) return true;
    return false;
  }

  final private boolean jj_3R_9() {
    if (jj_3R_12()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) jj_scanpos = xsp;
    return false;
  }

  final private boolean jj_3_25() {
    if (jj_scan_token(PTRPREFIX)) return true;
    return false;
  }

  final private boolean jj_3_33() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  final private boolean jj_3_37() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_35()) {
    jj_scanpos = xsp;
    if (jj_3_36()) return true;
    }
    return false;
  }

  final private boolean jj_3_35() {
    if (jj_scan_token(ADDRESS)) return true;
    return false;
  }

  final private boolean jj_3_20() {
    if (jj_scan_token(OFFSET)) return true;
    return false;
  }

  final private boolean jj_3_36() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) return true;
    }
    return false;
  }

  final private boolean jj_3_11() {
    if (jj_scan_token(LABEL)) return true;
    return false;
  }

  final private boolean jj_3_23() {
    if (jj_scan_token(LARGE)) return true;
    return false;
  }

  final private boolean jj_3_19() {
    if (jj_scan_token(FAR)) return true;
    return false;
  }

  final private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    }
    return false;
  }

  final private boolean jj_3_10() {
    if (jj_3R_9()) return true;
    return false;
  }

  final private boolean jj_3_32() {
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  final private boolean jj_3_6() {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  final private boolean jj_3_41() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_24()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) return true;
    }
    return false;
  }

  final private boolean jj_3_22() {
    if (jj_scan_token(SMALL)) return true;
    return false;
  }

  final private boolean jj_3_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) return true;
    }
    return false;
  }

  final private boolean jj_3_18() {
    if (jj_scan_token(SHORT)) return true;
    return false;
  }

  final private boolean jj_3_28() {
    if (jj_scan_token(DECLITERAL)) return true;
    return false;
  }

  final private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) return true;
    }
    return false;
  }

  final private boolean jj_3R_7() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  final private boolean jj_3_40() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    }
    }
    xsp = jj_scanpos;
    if (jj_3_21()) jj_scanpos = xsp;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  final private boolean jj_3_2() {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  final private boolean jj_3_31() {
    if (jj_scan_token(ADDRESS)) return true;
    return false;
  }

  final private boolean jj_3_30() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  final private boolean jj_3_17() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3_29() {
    if (jj_scan_token(HEXLITERAL)) return true;
    return false;
  }

  final private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    return false;
  }

  final private boolean jj_3_16() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3_5() {
    if (jj_3R_8()) return true;
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  final private boolean jj_3_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) return true;
    }
    return false;
  }

  final private boolean jj_3_4() {
    if (jj_scan_token(EOL)) return true;
    return false;
  }

  final private boolean jj_3_3() {
    if (jj_3R_7()) return true;
    return false;
  }

  final private boolean jj_3_14() {
    if (jj_3R_10()) return true;
    return false;
  }

  final private boolean jj_3R_6() {
    if (jj_scan_token(PROC)) return true;
    Token xsp;
    if (jj_3_2()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_2()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  final private boolean jj_3R_15() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  final private boolean jj_3_1() {
    if (jj_3R_6()) return true;
    return false;
  }

  final private boolean jj_3_15() {
    if (jj_scan_token(INSTPREFIX)) return true;
    return false;
  }

  final private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_15()) jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    return false;
  }

  final private boolean jj_3_13() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  final private boolean jj_3_27() {
    if (jj_scan_token(LABEL)) return true;
    return false;
  }

  final private boolean jj_3_12() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  final private boolean jj_3R_13() {
    if (jj_3R_14()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_14()) jj_scanpos = xsp;
    return false;
  }

  final private boolean jj_3_9() {
    if (jj_scan_token(HEXLITERAL)) return true;
    return false;
  }

  final private boolean jj_3_26() {
    if (jj_scan_token(LPAREN)) return true;
    return false;
  }

  final private boolean jj_3_38() {
    if (jj_scan_token(ADDRESS)) return true;
    return false;
  }

  final private boolean jj_3_39() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_26()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_27()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) return true;
    }
    }
    }
    xsp = jj_scanpos;
    if (jj_3_32()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_37()) jj_scanpos = xsp;
    return false;
  }

  final private boolean jj_3_34() {
    if (jj_scan_token(DECLITERAL)) return true;
    return false;
  }

  final private boolean jj_3R_12() {
    if (jj_3R_13()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_13()) jj_scanpos = xsp;
    return false;
  }

  public AsmParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  public boolean lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[41];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  public AsmParser(java.io.InputStream stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AsmParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public AsmParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AsmParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public AsmParser(AsmParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
